# cpp_snippets

./: README.md
bench/: Makefile  README.md  bench.cpp
binding/: README.md
binding/basic/: Makefile  README.md  main.py  module.cpp
binding/ml_example/: Makefile
binding/ml_example/src/: simple_ml.py  simple_ml_ext.cpp
fmt_demo/: CMakeLists.txt  README.md  hello.cpp
